--- a/.github/workflows/coverage-test.yml
+++ b/.github/workflows/coverage-test.yml
@@ -22,10 +22,19 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-      - name: .Net Code Coverage Badge
-        uses: simon-k/dotnet-code-coverage-badge@v1.0.0
+     - name: Test
+     - run: dotnet test  -p:CollectCoverage=true -p:CoverletOutput=TestResults/ -p:CoverletOutputFormat=opencover --no-build --verbosity normal <MyProject>.Tests/
+      
+     - name: Create Test Coverage Badge
+       uses: simon-k/dotnet-code-coverage-badge@v1.0.0
+       id: create_coverage_badge
+       with:
+        label: Unit Test Coverage SoftPlan
+        color: brightgreen
+        path: <MyProject>.Tests/TestResults/coverage.opencover.xml
+        gist-filename: code-coverage.json
+        gist-id: 1234567890abcdef1234567890abcdef
+        gist-auth-token: ${{ secrets.GIST_AUTH_TOKEN }}  
 
       
       
